# django_instagram

./: .dockerignore  .gitignore  Dockerfile  README.md  argparse_sample.py  deploy-docker-secrets.py  deploy-docker.sh  deploy.sh  docker-run-secrets.py  docker-run.py  pyproject.toml  requirements.txt
.cert/: QTZrhAkHAfjto7FBoDLsYqsKwLbRHKW51U7AqK86HGw  Wd04CJ--GDmTZmIZAsCc75_Btq0rjyjkSGNa7Z_J6gU
.config/: gunicorn.py  instagram.nginx  supervisord.conf
.requirements/: base.txt  dev.txt
app/: Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  Untitled3.ipynb  Untitled4.ipynb  requirements.txt
app/config/: settings.py  settings_env.py  urls.py  views.py
app/members/: admin.py  apis.py  forms.py  models.py  serializers.py  urls.py  urls_apis.py  views.py
app/members/migrations/: 0001_initial.py  0002_user_img_profile.py  0003_remove_user_img_profile.py  0004_user_name.py  0005_auto_20200108_1411.py
app/members/urls/: apis.py  views.py
app/posts/: admin.py  apis.py  forms.py  models.py  serializers.py  urls.py  views.py
app/posts/management/commands/: stats.py
app/posts/migrations/: 0001_initial.py  0002_auto_20200107_1414.py  0003_auto_20200114_1444.py  0004_auto_20200114_1739.py
app/posts/urls/: apis.py  views.py
app/templates/: base.html  index.html
app/templates/members/: login.html  signup.html
app/templates/posts/: comment-list.html  post-create.html  post-list.html
